# RL-Decoder-using-SAE-Features

./: .gitignore  ALIGNMENT_VERIFICATION_COMPLETE.md  CLEANUP_SUMMARY.txt  DOCUMENTATION_INDEX.md  DOCUMENTATION_VERIFICATION.md  LICENSE  MASTER_GUIDE.md  PHASE3_README.md  PHASE5_COMPLETION_REPORT.md  PHASE5_TASK4_REFACTOR_STATUS.md  PHASE5_TASK4_SPECIFICATION.md  PHASE5_TASK4_TRAINING_STATUS.md  PHASE6_TRACKER_SUMMARY.md  PROJECT_CONFIG.md  PROJECT_STATUS.md  README.md  SAE_EVAL_RESULTS.md  SAE_TEST_EVALUATION.md  SAE_TRAINING_CONFIGS.md  SETUP.md  SETUP_VERIFICATION.md  TODO.md  TRAINING_PERFORMANCE_RTX6000.md  overview.tex  phase6_implementation.md  presentation.html  pyproject.toml  requirements.txt  setup_env.sh  summary.md
datasets/: DATASETS.md  download_datasets.py  tokenize_datasets.py
docs/: ALIGNMENT_VERIFICATION.md  DOCUMENTATION_INDEX.md  EXECUTION_START_HERE.md  MIXED_HIDDEN_SAE_TRAJECTORY_VALIDATION_PROTOCOL.md  PHASE5_TASK4_ANALYSIS_REPORT.md  PHASE7V3_TRACKC_FINDINGS.md  PHASE7_AUDITOR_PROTOCOL_SCOPE.md  PHASE8_RERANKING_PLAN.md  PROJECT_COMPLETION_SUMMARY.md  TRACKC_CAUSAL_INTERPRETATION_AND_ACTION_PLAN.md  TRACKC_NEGATIVE_FINDING.md  TRACKC_NEGATIVE_TO_POSITIVE_STORY.md  baselines.yaml  data_manifest.yaml  tokenizer_hashes.md  tracking.md
experiments/: PHASE7_LAYER_SWEEP_REVIEW.md  build_layer_sweep_manifest.py  layer_sweep_manifest.py  layer_sweep_manifest_v1.json  phase7_sweep_worker.py  run_optionc_stress.sh  run_phase2_qwen25_sae_training.sh  run_phase6v2_d2_operate_only.sh  run_phase6v2_d3_operator_fix.sh  run_phase7_causal_recovery_r2p2.sh  (+29 more)
(+1389 files in other folders)
