[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl_decoder_sae"
version = "0.1.0"
description = "Interpretable RL decoder with sparse autoencoder features"
readme = "README.md"
authors = [{ name = "Codex Project" }]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
